--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">Nearby Demo</string>
     <string name="service_id">com.movisens.nearbyDemo</string>
 </resources>
